# survey-overall-reading

./: .gitignore  README.md  paper_reading_system_plan.md  pyproject.toml  runbook.md
config/: project.yaml  review_inputs.yaml
config/agent_prompts/: 01_review_parser.md  02_citation_extractor.md  03_importance_scorer.md  04_metadata_normalizer.md  05_top_conference_supplement.md  06_paper_discovery.md  07_pdf_downloader.md  08_deep_reader.md  09_first_principles_critic.md  10_note_writer.md  11_quality_auditor.md  12_idea_synthesizer.md  13_orchestrator.md
config/schemas/: candidate.schema.json  download_record.schema.json  evidence_packet.schema.json  idea.schema.json  paper_id.schema.json  reading_note.schema.json
docs/zh/: orchestrator-agent.md  orchestrator-production-prompt.md  usage.md
paper_reading_system/: __init__.py  agentic.py  audit.py  cli.py  dedup.py  downloads.py  io.py  models.py  notes.py  orchestrator.py  paper_id.py  scoring.py  state.py  validation.py
tests/: test_cli_workflow.py  test_notes.py  test_paper_id.py  test_production_tools.py  test_scoring.py  test_state.py
tests/fixtures/: candidates.jsonl
